Removed hard coded transactions, added if statement to show a message if there is no transaction

--- a/src/App.css
+++ b/src/App.css
@@ -142,3 +142,9 @@ body {
 .plus-color {
   color: #2da3ad !important;
 }
+
+.empty {
+  text-align: center;
+  margin: 20px auto !important;
+  max-width: 450px;
+}
